--- a/index.html
+++ b/index.html
@@ -249,9 +249,9 @@
                      <a class="button-solid" href="/contact.html">Get Free Quote</a>
                 </div>
                 <picture class="image-box">
-                     <source media="(max-width: 600px)" srcset="/images/cabinets2-m.jpg">
-                     <source media="(min-width: 601px)" srcset="/images/cabinets2.jpg">
-                     <img aria-hidden="true" loading="lazy" decoding="async" src="/images/cabinets2.jpg" alt="cabinets" width="400" height="662">
+                     <source media="(max-width: 600px)" srcset="/images/epoxyFloor3.jpg">
+                     <source media="(min-width: 601px)" srcset="/images/epoxyFloor3.jpg">
+                     <img aria-hidden="true" loading="lazy" decoding="async" src="/images/epoxyFloor3.jpg" alt="epoxy floor 3" width="400" height="662">
                  </picture>
             </div>
        </section>
@@ -264,14 +264,14 @@
             <div class="container">
                 <h2 class="title">Get It Done <br> With Us Today</h2>
                 <p>
-                    Say something catchy, informative, and encouraging to click the button to go to the contact page.  I like to add these to the bottom of all pages.
+                    Ready to transform your space with stunning epoxy floors? Click that button now and let's bring your dream flooring to life!
                 </p>
                 <a href="/contact.html" class="button-solid">Get an Estimate Now</a>
             </div>
             <picture>
-                <source media="(max-width: 600px)" srcset="/images/cabinets2-m.webp">
-                <source media="(min-width: 601px)" srcset="/images/cabinets2.jpg">
-                <img aria-hidden="true" loading="lazy" decoding="async" src="/images/cabinets2.jpg" alt="kitchen cabinets" width="1920" height="1280">
+                <source media="(max-width: 600px)" srcset="/images/epoxyFloor2.jpg">
+                <source media="(min-width: 601px)" srcset="/images/epoxyFloor2.jpg">
+                <img aria-hidden="true" loading="lazy" decoding="async" src="/images/epoxyFloor2.jpg" alt="epoxy floor 2" width="1920" height="1280">
              </picture>
         </section>
     </main>
