updated pictures, faq section, nav bar

--- a/contact.html
+++ b/contact.html
@@ -71,7 +71,7 @@
                     <li><a href="/index.html">Home</a></li>
                     <li><a href="/about.html">About Us</a></li>
                     <li><a href="/projects.html">Projects</a></li>
-                    <li><a href="/reviews.html">Reviews</a></li>
+                    <li><a href="/reviews.html">FAQ</a></li>
                     <li><a class="active" href="/contact.html">Contact</a></li>
                 </ul>
             </nav>
@@ -99,9 +99,9 @@
         <section id="int-hero">
             <h1 id="home-h">Contact Us</h1>
             <picture>
-                <source media="(max-width: 600px)" srcset="/images/cabinets2-m.jpg">
-                <source media="(min-width: 601px)" srcset="/images/cabinets2.jpg">
-                <img aria-hidden="true" loading="lazy" decoding="async" src="/images/cabinets2.jpg" alt="" width="400" height="662">
+                <source media="(max-width: 600px)" srcset="/images/landing.jpg">
+                <source media="(min-width: 601px)" srcset="/images/landing.jpg">
+                <img aria-hidden="true" loading="lazy" decoding="async" src="/images/landing.jpg" alt="" width="400" height="662">
             </picture>
         </section>
 
@@ -143,7 +143,7 @@
                         </div>
                         <div class="input-group textarea">
                             <label for="message">Message</label>
-                            <textarea id="message" aria-label="write your message" name="message" placeholder="Tell us about what you need help with" tabindex="6" required></textarea>
+                            <textarea id="message" aria-label="write your message" name="message" placeholder="Tell us about what you need help with, or any other questions. If you know the square footage of your project area, or location, etc., please include that information here!" type="text" tabindex="6" required></textarea>
                             <div aria-hidden="true" class="hover-box"></div>
                         </div>
                     <p class="form-submit">
@@ -154,7 +154,7 @@
             <div class="contact-right">
                 <div class="info-group">
                     <span class="heading">Location</span>
-                    <span class="info">Denver, CO</span>
+                    <span class="info">Van Nuys, CA</span>
                 </div>
                 <div class="info-group">
                     <span class="heading">Phone</span>
@@ -192,7 +192,7 @@
                         <li><a href="/index.html">Home</a></li>
                         <li><a href="/about.html">About Us</a></li>
                         <li><a href="/projects.html">Projects</a></li>
-                        <li><a href="/testimonials.html">Reviews</a></li>
+                        <li><a href="/reviews.html">FAQ</a></li>
                         <li><a href="/contact.html">Contact</a></li>
                     </ul>
                     <ul>
