--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <link rel="stylesheet" href="/css/local.css">
     </noscript>
 
-    <title>Company Name | What They Do | Town and State</title>
+    <title>Gary's Epoxy Services | All Types of Epoxy Flooring | Greater Los Angeles</title>
 </head>
 <body>
     <!--Screen reader skip main nav-->
@@ -78,7 +78,7 @@
                     <li><a class="active" href="/index.html">Home</a></li>
                     <li><a href="/about.html">About Us</a></li>
                     <li><a href="/projects.html">Projects</a></li>
-                    <li><a href="/reviews.html">Reviews</a></li>
+                    <li><a href="/reviews.html">FAQ</a></li>
                     <li><a href="/contact.html">Contact</a></li>
                 </ul>
             </nav>
@@ -163,40 +163,19 @@
         <section id="sidebyside" class="sidebyside">
             <div class="container">
                 <div class="content">
-                    <h2 class="title">Trusted epoxy flooring services for Los Angeles for over 10 years</h2>
+                    <h2 class="title">Trusted Epoxy Flooring Services for Los Angeles for Over 10 Years</h2>
                      <p>
                         At Gary's Epoxy Services, we take pride in being your trusted source for high-quality epoxy flooring solutions. With a relentless commitment to excellence and a passion for innovation, we are becoming a leading name in the epoxy flooring industry.
                      </p>
-                     <p>Our journey began with a simple vision: to transform spaces with the beauty and durability of epoxy floors. Over the years, we have refined our craft and honed our expertise, delivering stunning epoxy flooring solutions for both residential and commercial properties. From sleek and modern designs to industrial-grade floors that can withstand heavy use, we cater to a wide range of needs and preferences.</p>
                      <p>
-                         <strong>A list if you need it:</strong>
-                      </p>
-                     <ul>
-                        <li>
-                            <img aria-hidden="true" loading="lazy" decoding="async" src="/images/check.svg" alt="check mark" width="20" height="20">
-                            <span>List item about something, this one is going to two lines so you can see what it looks like</span>
-                        </li>
-                        <li>
-                            <img aria-hidden="true" loading="lazy" decoding="async" src="/images/check.svg" alt="check mark" width="20" height="20">
-                            <span>List item about something</span>
-                        </li>
-                        <li>
-                            <img aria-hidden="true" loading="lazy" decoding="async" src="/images/check.svg" alt="check mark" width="20" height="20">
-                            <span>List item about something</span>
-                        </li>
-                        <li>
-                            <img aria-hidden="true" loading="lazy" decoding="async" src="/images/check.svg" alt="check mark" width="20" height="20">
-                            <span>List item about something</span>
-                        </li>
-                        <li>
-                            <img aria-hidden="true" loading="lazy" decoding="async" src="/images/check.svg" alt="check mark" width="20" height="20">
-                            <span>List item about something</span>
-                        </li>
-                    </ul>
+                        Our journey began with a simple vision: to transform spaces with the beauty and durability of epoxy floors. Over the years, we have refined our craft and honed our expertise, delivering stunning epoxy flooring solutions for both residential and commercial properties. From sleek and modern designs to industrial-grade floors that can withstand heavy use, we cater to a wide range of needs and preferences.
+                    </p>
                      <p>
                         What sets us apart is our unwavering dedication to customer satisfaction. We understand that every project is unique, and we approach each one with a tailored strategy. Our experienced team takes the time to listen to your requirements, offer expert advice, and provide solutions that not only meet but exceed your expectations. With us, you're not just getting a floor; you're getting a work of art that enhances the aesthetics and functionality of your space.
                      </p>
-                     <p>Whether you're looking to transform your home or business with epoxy flooring, repair existing epoxy floors, or explore custom designs, Gary's Epoxy Services is your partner of choice. Join us on this journey of creativity and durability, and let us turn your flooring dreams into reality.</p>
+                     <p>
+                        Whether you're looking to transform your home or business with epoxy flooring, repair existing epoxy floors, or explore custom designs, Gary's Epoxy Services is your partner of choice. Join us on this journey of creativity and durability, and let us turn your flooring dreams into reality.
+                    </p>
                      <a class="button-solid" href="/about.html">More About Us</a>
                 </div>
                 <picture class="image-box">
