--- a/about.html
+++ b/about.html
@@ -71,7 +71,7 @@
                     <li><a href="/index.html">Home</a></li>
                     <li><a class="active" href="/about.html">About Us</a></li>
                     <li><a href="/projects.html">Projects</a></li>
-                    <li><a href="/reviews.html">Reviews</a></li>
+                    <li><a href="/reviews.html">FAQ</a></li>
                     <li><a href="/contact.html">Contact</a></li>
                 </ul>
             </nav>
@@ -99,9 +99,9 @@
         <section id="int-hero">
             <h1 id="home-h">About Us</h1>
             <picture>
-                <source media="(max-width: 600px)" srcset="/images/cabinets2-m.jpg">
-                <source media="(min-width: 601px)" srcset="/images/cabinets2.jpg">
-                <img aria-hidden="true" decoding="async" src="/images/cabinets2.jpg" alt="cabinets" width="400" height="662">
+                <source media="(max-width: 600px)" srcset="/images/landing.jpg">
+                <source media="(min-width: 601px)" srcset="/images/landing.jpg">
+                <img aria-hidden="true" decoding="async" src="/images/landing.jpg" alt="cabinets" width="400" height="662">
             </picture>
         </section>
 
@@ -147,9 +147,9 @@
                      <a class="button-solid" href="/conttact.html">Get Free Quote</a>
                 </div>
                 <picture class="image-box">
-                     <source media="(max-width: 600px)" srcset="/images/cabinets2-m.jpg">
-                     <source media="(min-width: 601px)" srcset="/images/cabinets2.jpg">
-                     <img aria-hidden="true" loading="lazy" decoding="async" src="/images/cabinets2.jpg" alt="cabinets" width="400" height="662">
+                     <source media="(max-width: 600px)" srcset="/images/epoxyGarage1.jpg">
+                     <source media="(min-width: 601px)" srcset="/images/epoxyGarage1.jpg">
+                     <img aria-hidden="true" loading="lazy" decoding="async" src="/images/epoxyGarage1.jpg" alt="cabinets" width="400" height="662">
                  </picture>
             </div>
        </section>
@@ -162,14 +162,14 @@
             <div class="container">
                 <h2 class="title">Get It Done <br> With Us Today</h2>
                 <p>
-                    Say something catchy, informative, and encouraging to click the button to go to the contact page.  I like to add these to the bottom of all pages.
+                    Ready to transform your space with stunning epoxy floors? Click that button now and let's bring your dream flooring to life!
                 </p>
                 <a href="/contact.html" class="button-solid">Free Estimate</a>
             </div>
             <picture>
-                <source media="(max-width: 600px)" srcset="/images/cabinets2-m.webp">
-                <source media="(min-width: 601px)" srcset="/images/cabinets2.jpg">
-                <img aria-hidden="true" loading="lazy" decoding="async" src="/images/cabinets2.jpg" alt="kitchen cabinets" width="1920" height="1280">
+                <source media="(max-width: 600px)" srcset="/images/epoxyFloor3.jpg">
+                <source media="(min-width: 601px)" srcset="/images/epoxyFloor3.jpg">
+                <img aria-hidden="true" loading="lazy" decoding="async" src="/images/epoxyFloor3.jpg" alt="kitchen cabinets" width="1920" height="1280">
              </picture>
         </section>
 
