updated all footers

--- a/about.html
+++ b/about.html
@@ -206,8 +206,8 @@
                     </ul>
                     <ul>
                         <li><h2>Contact</h2></li>
-                        <li><a href="/contact.html">First Address Line<br>Denver CO 80206</a></li>
-                        <li><a href="tel:555-779-4407">T: (555) 779-4407</a></li>
+                        <li><a href="/contact.html">First Address Line<br>Van Nuys, CA 91402</a></li>
+                        <li><a href="tel:555-779-4407">T: (818) 555-5555</a></li>
                         <li><a href="mailto:email@email.com">Click to Email</a></li>
                     </ul>
                 </div>
@@ -216,7 +216,7 @@
 
         <div class="credit">
             <span>Designed and Hand Coded by</span>
-            <a href="" target="_blank" rel="noopener">Your Company Name</a>
+            <a href="" target="_blank" rel="noopener">GHM</a>
             <span class="copyright"> Copyright 2021 - Present</span></div>
     </footer>
 
