updated contact form layout and input groups

--- a/contact.html
+++ b/contact.html
@@ -133,12 +133,27 @@
                         </div>
                         <div class="input-group">
                             <label for="location">Location</label>
-                            <input id="location" aria-label="location" class="input1 right" name="location" placeholder="Your Location" type="text" tabindex="4" required>
+                            <input id="location" aria-label="location" class="input1" name="location" placeholder="Your Location" type="text" tabindex="4" required>
                             <div aria-hidden="true" class="hover-box"></div>
                         </div>
                         <div class="input-group">
-                            <label for="how">How did you hear about us</label>
-                            <input id="how" aria-label="how did you hear about us" name="hear" placeholder="How Did You Hear About Us" type="text" tabindex="5" required>
+                            <label for="howBig">How Big is the Garage?</label>
+                            <input id="howBig" aria-label="How Big is the Garage?" class="input1 right" name="howBig" placeholder="1, 2, 3, or 4 (or more) cars" type="text" tabindex="5" required>
+                            <div aria-hidden="true" class="hover-box"></div>
+                        </div>
+                        <div class="input-group">
+                            <label for="repair">Does the Concrete Need Any Repairs?</label>
+                            <input id="repair" aria-label="Are There Any Repairs Needed to the Concrete?" name="repair" placeholder="no cracks / some major cracks" type="text" tabindex="5" required>
+                            <div aria-hidden="true" class="hover-box"></div>
+                        </div>
+                        <div class="input-group">
+                            <label for="color">What Color Epoxy Do You Like?</label>
+                            <input id="color" aria-label="What Color Epoxy Do You Like?" class="input1" name="color" placeholder="Grey / Tan / Custom" type="text" tabindex="5" required>
+                            <div aria-hidden="true" class="hover-box"></div>
+                        </div>
+                        <div class="input-group">
+                            <label for="when">When Will You Need It Done?</label>
+                            <input id="when" aria-label="When Will You Need It Done?" class="input1 right" name="when" placeholder="ASAP / Next Week / Next Month" type="text" tabindex="5" required>
                             <div aria-hidden="true" class="hover-box"></div>
                         </div>
                         <div class="input-group textarea">
@@ -215,7 +230,7 @@
         <div class="credit">
             <span>Designed and Hand Coded by</span>
             <a href="" target="_blank" rel="noopener">GHM</a>
-            <span class="copyright"> Copyright 2021 - Present</span></div>
+            <span class="copyright"> Copyright 2023 - Present</span></div>
     </footer>
 
     <script defer src="/nav.js"></script>
