--- a/about.html
+++ b/about.html
@@ -194,7 +194,7 @@
                         <li><a href="/index.html">Home</a></li>
                         <li><a href="/about.html">About Us</a></li>
                         <li><a href="/projects.html">Projects</a></li>
-                        <li><a href="/testimonials.html">Reviews</a></li>
+                        <li><a href="/reviews.html">FAQ</a></li>
                         <li><a href="/contact.html">Contact</a></li>
                     </ul>
                     <ul>
