embedded youtube link in projects section

--- a/projects.html
+++ b/projects.html
@@ -165,6 +165,10 @@
                         <img loading="lazy" decoding="async" src="/images/portfolio/port9.jpg" alt="new garage epoxy floor" width="420" height="629">
                      </picture>
                 </div>
+                <div display="flex" flex-direction="row" justify-content="center">
+                    <object data="http://www.youtube.com/embed/Xjwyy_A2zDA" width="800" height="506"></object>
+                    <object data="http://www.youtube.com/embed/nSRXnnVE7SU" width="800" height="506"></object>
+                </div>
             </div>
         </section>
 
