--- a/reviews.html
+++ b/reviews.html
@@ -129,7 +129,7 @@
                         Do you provide a warranty?
                      </p>
                      <div class="star-group">
-                        <span class="name">Yes, we provide 10 years warranty<span class="desc"></span></span>
+                        <span class="name">Yes, we provide 10 years warranty.<span class="desc"></span></span>
                      </div>
                 </div>
                 <div class="review">
@@ -152,7 +152,7 @@
                         How long to wait before bringing a car in?
                      </p>
                      <div class="star-group">
-                        <span class="name">The floor will be ready to walk on in 24 hours, and drive on in 48 hours<span class="desc"></span></span>
+                        <span class="name">The floor will be ready to walk on in 24 hours, and drive on in 48 hours.<span class="desc"></span></span>
                          
                      </div>
                 </div>
