updated license number

--- a/reviews.html
+++ b/reviews.html
@@ -188,7 +188,7 @@
                         Are you a licensed company?
                      </p>
                      <div class="star-group">
-                        <span class="name">Yes, we are licensed. Our license number is: #ABC123DoReMi<span class="desc"></span></span>
+                        <span class="name">Yes, we are licensed. Our license number is: CSLB 998719.<span class="desc"></span></span>
                          
                      </div>
                 </div>
