updated business address

--- a/index.html
+++ b/index.html
@@ -286,9 +286,9 @@
                     </ul>
                     <ul>
                         <li><h2>Contact</h2></li>
-                        <li><a href="/contact.html">First Address Line<br>Van Nuys, CA 91402</a></li>
+                        <li><a href="/contact.html">6064 Hazelhurst Place, #12<br>North Hollywood, CA 91606</a></li>
                         <li><a href="tel:555-779-4407">T: (818) 555-5555</a></li>
-                        <li><a href="mailto:email@email.com">Click to Email</a></li>
+                        <li><a href="mailto:garageepoxyservices@gmail.com">Click to Email</a></li>
                     </ul>
                 </div>
             </div>
