updated title tag across entire site

--- a/about.html
+++ b/about.html
@@ -38,7 +38,7 @@
 
     <!--Put analytics tag here at the bottom to prevent it from render blocking-->
 
-    <title>Company Name | About Us | Town and State</title>
+    <title>Garage Epoxy Services | About Us</title>
 </head>
 <body>
     <!--Screen reader skip main nav-->
