--- a/projects.html
+++ b/projects.html
@@ -38,7 +38,7 @@
 
     <!--Put analytics tag here at the bottom to prevent it from render blocking-->
 
-    <title>Gary's Epoxy Services | Projects | Greater Los Angeles</title>
+    <title>Garage Epoxy Services | Projects</title>
 </head>
 <body>
     <!--Screen reader skip main nav-->
