--- a/contact.html
+++ b/contact.html
@@ -38,7 +38,7 @@
 
     <!--Put analytics tag here at the bottom to prevent it from render blocking-->
 
-    <title>Company Name | Contact Us | Town and State</title>
+    <title>Garage Epoxy Services | Contact Us</title>
 </head>
 <body>
     <!--Screen reader skip main nav-->
