--- a/reviews.html
+++ b/reviews.html
@@ -38,7 +38,7 @@
 
     <!--Put analytics tag here at the bottom to prevent it from render blocking-->
 
-    <title>Gary's Epoxy Services | FAQ | Greater Los Angeles</title>
+    <title>Garage Epoxy Services | Frequently Asked Questions</title>
 </head>
 <body>
     <!--Screen reader skip main nav-->
