filled in extra content for google adsense ranking

--- a/index.html
+++ b/index.html
@@ -131,27 +131,27 @@
                 <picture>
                     <img aria-hidden="true" decoding="async" src="/images/service1.svg" alt="appliance" width="48" height="48">
                 </picture>
-                <h2>Service 1</h2>
+                <h2></h2>
                 <p>
-                    Talk about the service with keywords people will be searching for it by. Keep it 1-2 sentences.
+                    Epoxy Garage Services provides a durable and visually appealing solution to protect and enhance your garage floor. 
                 </p>
             </div>
             <div class="card">
                 <picture>
                     <img aria-hidden="true" decoding="async" src="/images/service2.svg" alt="appliance" width="48" height="48">
                 </picture>
-                <h2>Service 2</h2>
+                <h2></h2>
                 <p>
-                    Talk about the service with keywords people will be searching for it by. Keep it 1-2 sentences.
+                    Whether you're looking to enhance the aesthetics of your space, improve its durability, or protect its surfaces, epoxy flooring can offer a versatile solution.
                 </p>
             </div>
             <div class="card">
                 <picture>
                     <img aria-hidden="true" decoding="async" src="/images/service3.svg" alt="appliance" width="48" height="48">
                 </picture>
-                <h2>Service 3</h2>
+                <h2></h2>
                 <p>
-                    Talk about the service with keywords people will be searching for it by. Keep it 1-2 sentences.
+                    Create a unique look for your space, from vibrant hues to intricate designs, with epoxy flooring options that suit your style!
                 </p>
             </div>
         </section>
@@ -163,7 +163,7 @@
         <section id="sidebyside" class="sidebyside">
             <div class="container">
                 <div class="content">
-                    <h2 class="title">Trusted Epoxy Flooring Services for Los Angeles for Over 10 Years</h2>
+                    <h2 class="title">Trusted Epoxy Flooring Services for Los Angeles since 2003</h2>
                      <p>
                         At Garage Epoxy Services, we take pride in being your trusted source for high-quality epoxy flooring solutions. With a relentless commitment to excellence and a passion for innovation, we are becoming a leading name in the epoxy flooring industry.
                      </p>
@@ -193,37 +193,37 @@
         <section id="sidebyside-reverse">
             <div class="container">
                 <div class="content">
-                    <h2 class="title">Extra content, maybe talk about a main service</h2>
+                    <h2 class="title">Why Get an Epoxy Floor?</h2>
                      <p>
-                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam debitis dolor consectetur dolorem inventore modi tenetur ex odit, amet beatae ad, doloribus tempora quae ab nulla minus temporibus at veritatis!
+                        Epoxy surfaces have become increasingly popular for a wide range of applications, both in residential and commercial settings.
                      </p>
                      <p>
-                         <strong>A list if you need it:</strong>
+                         <strong>Key Benefits to Epoxy Flooring:</strong>
                       </p>
                      <ul>
                         <li>
                             <img aria-hidden="true" loading="lazy" decoding="async" src="/images/check.svg" alt="check mark" width="20" height="20">
-                            <span>List item about something</span>
+                            <span>Durability: Epoxy floors are highly resilient and can withstand heavy traffic and impact.</span>
                         </li>
                         <li>
                             <img aria-hidden="true" loading="lazy" decoding="async" src="/images/check.svg" alt="check mark" width="20" height="20">
-                            <span>List item about something</span>
+                            <span>Easy Maintenance: They are simple to clean and maintain, reducing the need for extensive upkeep.</span>
                         </li>
                         <li>
                             <img aria-hidden="true" loading="lazy" decoding="async" src="/images/check.svg" alt="check mark" width="20" height="20">
-                            <span>List item about something</span>
+                            <span>Chemical Resistance: Epoxy floors resist chemicals, making them ideal for industrial and commercial applications.</span>
                         </li>
                         <li>
                             <img aria-hidden="true" loading="lazy" decoding="async" src="/images/check.svg" alt="check mark" width="20" height="20">
-                            <span>List item about something</span>
+                            <span>Aesthetics: Epoxy comes in various colors and designs, enhancing the visual appeal of the space.</span>
                         </li>
                         <li>
                             <img aria-hidden="true" loading="lazy" decoding="async" src="/images/check.svg" alt="check mark" width="20" height="20">
-                            <span>List item about something</span>
+                            <span>Longevity: Epoxy floors can last for many years, providing a cost-effective flooring solution.</span>
                         </li>
                     </ul>
                      <p>
-                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium saepe laborum nam consequuntur porro inventore odio? Quod autem alias ratione cum reiciendis qui quaerat, sequi voluptatum voluptatibus, iusto itaque sed ullam. Quis, maiores corrupti. Rerum quo laudantium vero magnam tempora!
+                        Whether in a residential garage or a high-traffic commercial space, these benefits make epoxy floors a practical and visually appealing choice for many.
                      </p>
                      <a class="button-solid" href="/contact.html">Get Free Quote</a>
                 </div>
