updated about us section

--- a/about.html
+++ b/about.html
@@ -112,48 +112,50 @@
         <section id="sidebyside" class="sidebyside">
             <div class="container">
                 <div class="content">
-                    <h2 class="title">Lorem ipsum dolor sit amet consectetur.</h2>
+                    <h2 class="title">Trusted Epoxy Floor Services since 2003</h2>
                      <p>
-                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam debitis dolor consectetur dolorem inventore modi tenetur ex odit, amet beatae ad, doloribus tempora quae ab nulla minus temporibus at veritatis!
+                        Welcome to Garage Epoxy Services, where we take pride in our commitment to excellence! With over two decades of experience, I'm Gor, a licensed Contractor and passionate enthusiast. As a car racing aficionado, engine builder, Epoxy floor specialist, and proud father, I've dedicated the last 10 years to perfecting the art of garage floor epoxy installations and honed my skills for over 5 years in the Epoxy Composite industry.
                      </p>
                      <p>
-                         <strong>List if you need it:</strong>
-                      </p>
-                     <ul>
-                        <li>
-                            <img aria-hidden="true" loading="lazy" decoding="async" src="/images/check.svg" alt="check mark" width="20" height="20">
-                            <span>List item about something</span>
-                        </li>
-                        <li>
-                            <img aria-hidden="true" loading="lazy" decoding="async" src="/images/check.svg" alt="check mark" width="20" height="20">
-                            <span>List item about something</span>
-                        </li>
-                        <li>
-                            <img aria-hidden="true" loading="lazy" decoding="async" src="/images/check.svg" alt="check mark" width="20" height="20">
-                            <span>List item about something</span>
-                        </li>
-                        <li>
-                            <img aria-hidden="true" loading="lazy" decoding="async" src="/images/check.svg" alt="check mark" width="20" height="20">
-                            <span>List item about something</span>
-                        </li>
-                        <li>
-                            <img aria-hidden="true" loading="lazy" decoding="async" src="/images/check.svg" alt="check mark" width="20" height="20">
-                            <span>List item about something</span>
-                        </li>
-                    </ul>
-                     <p>
-                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium saepe laborum nam consequuntur porro inventore odio? Quod autem alias ratione cum reiciendis qui quaerat, sequi voluptatum voluptatibus, iusto itaque sed ullam. Quis, maiores corrupti. Rerum quo laudantium vero magnam tempora!
+                        During my journey, I've had the privilege of crafting custom parts from carbon fiber material for high-performance Chevrolet Corvette race cars. It all began in my living room, and gradually, I expanded into a dedicated garage space. I understand the importance of a garage floor that not only looks great but is also highly functional. It needs to withstand chemicals, such as gasoline and acetone-based products, without flinching, and bear the weight of heavy equipment like jacks with ease.
                      </p>
-                     <a class="button-solid" href="/conttact.html">Get Free Quote</a>
+                     <p>
+                        In my pursuit of excellence, I've established relationships with trusted vendors in the epoxy products industry. I've meticulously learned which epoxy-based products are the best for your garage floor applications. At Garage Epoxy Services, we're dedicated to transforming your garage into a space that's not only visually appealing but also built to last. Your satisfaction is our ultimate goal, and we guarantee that with our expertise, your garage floor will meet the highest standards of quality and performance.
+                    </p>
                 </div>
                 <picture class="image-box">
-                     <source media="(max-width: 600px)" srcset="/images/epoxyGarage1.jpg">
-                     <source media="(min-width: 601px)" srcset="/images/epoxyGarage1.jpg">
-                     <img aria-hidden="true" loading="lazy" decoding="async" src="/images/epoxyGarage1.jpg" alt="cabinets" width="400" height="662">
+                     <source media="(max-width: 600px)" srcset="/images/epoxyGarage2.jpg">
+                     <source media="(min-width: 601px)" srcset="/images/epoxyGarage2.jpg">
+                     <img aria-hidden="true" loading="lazy" decoding="async" src="/images/epoxyGarage2.jpg" alt="cabinets" width="400" height="662">
                  </picture>
             </div>
        </section>
-
+       
+       <section id="sidebyside" class="sidebyside">
+        <div class="container">
+            <div class="content">
+                 <p>
+                    My journey into the world of epoxy began in the summer of 2003, alongside my father, who was a seasoned General Contractor at the time. We had the opportunity to undertake a significant painting project in a new two-story house in beautiful Orange County, California. When we met the homeowner in person, our first stop was the garage, where she expressed her desire to transform the plain concrete floor into something both durable and visually appealing.
+                 </p>
+                 <p>
+                    My father proposed the idea of applying an epoxy/resin-based product to the floor, a suggestion that resonated with the homeowner's vision. Although the concrete floor appeared in good shape to me, the homeowner desired more than just a bare-looking surface. She sought a floor that not only cleaned easily but also complemented the sleek black finish of her recently purchased Lincoln Navigator. The chosen color was a vibrant lime green, an exclusive custom shade we sourced from a local boat repair supply store in Long Beach, CA.
+                 </p>
+                 <p>
+                    Back in 2003, technology was not as advanced as it is today, and we lacked the convenience of smartphones to capture photos or videos. Unfortunately, I don't have any visual records of that particular job. However, despite it being my first experience with epoxy, the end result was remarkable and left a lasting impression on both the homeowner and myself.
+                </p>
+                <p>
+                    At Garage Epoxy Services, we've come a long way since then, and we're committed to delivering even more exceptional results for your epoxy flooring projects today.
+                </p>
+                 <a class="button-solid" href="/contact.html">Get Free Quote</a>
+            </div>
+            <picture class="image-box">
+                 <source media="(max-width: 600px)" srcset="/images/epoxyGarage3.jpg">
+                 <source media="(min-width: 601px)" srcset="/images/epoxyGarage3.jpg">
+                 <img aria-hidden="true" loading="lazy" decoding="async" src="/images/epoxyGarage3.jpg" alt="cabinets" width="400" height="662">
+             </picture>
+        </div>
+   </section>
+   
         <!-- ============================================ -->
         <!--             Final Call to Action             -->
         <!-- ============================================ -->
