--- a/contact.html
+++ b/contact.html
@@ -169,7 +169,7 @@
             <div class="contact-right">
                 <div class="info-group">
                     <span class="heading">Location</span>
-                    <span class="info">Van Nuys, CA</span>
+                    <span class="info">North Hollywood, CA</span>
                 </div>
                 <div class="info-group">
                     <span class="heading">Phone</span>
@@ -177,7 +177,7 @@
                 </div>
                 <div class="info-group">
                     <span class="heading">Email</span>
-                    <a class="info" href="mailto:email@email.com">Click to Email</a>
+                    <a class="info" href="mailto:garageepoxyservices@gmail.com">Click to Email</a>
                 </div>
                 <div class="info-group">
                     <span class="heading">Hours</span>
