grammar change, small

--- a/about.html
+++ b/about.html
@@ -144,7 +144,7 @@
                     Back in 2003, technology was not as advanced as it is today, and we lacked the convenience of smartphones to capture photos or videos. Unfortunately, I don't have any visual records of that particular job. However, despite it being my first experience with epoxy, the end result was remarkable and left a lasting impression on both the homeowner and myself.
                 </p>
                 <p>
-                    At Garage Epoxy Services, we've come a long way since then, and we're committed to delivering even more exceptional results for your epoxy flooring projects today.
+                    At Garage Epoxy Services, we've come a long way since then, and we're committed to delivering even more exceptional results for your epoxy flooring projects today!
                 </p>
                  <a class="button-solid" href="/contact.html">Get Free Quote</a>
             </div>
