--- a/contact.html
+++ b/contact.html
@@ -113,7 +113,7 @@
             <div class="left-section">
                 <h2 class="title">Send a Message</h2>
                 <p>If you have any questions or concerns please feel free to reach out to us.  We respond to every call and email.</p>
-                <form id="contact" name="Contact Form2" method="post" data-netlify="true">
+                <form id="contact" name="Contact Form2" method="post" data-netlify="true" netlify>
                         <div class="input-group">
                             <label for="name">Full Name</label>
                             <input id="name" aria-label="name" class="input1" name="name" placeholder="Full Name" type="text" tabindex="1" required>
@@ -223,6 +223,7 @@
             <a href="" target="_blank" rel="noopener">GHM</a>
             <span class="copyright"> Copyright 2023 - Present</span></div>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="https://smtpjs.com/v3/smtp.js">
     </script>
     <script defer src="/nav.js"></script>
